auth modal + sidemenu button z-index fix

--- a/src/app/body/all-products/product-card/product-card.component.scss
+++ b/src/app/body/all-products/product-card/product-card.component.scss
@@ -192,6 +192,7 @@
         left: 0;
         width: 50%;
         order: 2;
+        margin-left: auto;
         a {
           width: 100%;
           margin-top: 0;
