--- a/src/app/header/header-mobile/header-mobile.component.scss
+++ b/src/app/header/header-mobile/header-mobile.component.scss
@@ -1,6 +1,7 @@
 .header-mobile {
   position: fixed;
-  top: 0;
+  top: 58px;
+  padding-bottom: 58px;
   left: 15px;
   height: 100%;
   width: 270px;
@@ -11,26 +12,9 @@
   &.active {
     transform: translateX(-15px);
   }
-  &_button {
-    position: absolute;
-    background: #fff;
-    padding: 17px 15px;
-    width: 50px;
-    height: 50px;
-    top: 2px;
-    left: calc(100% - 1px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-    span {
-      height: 2px;
-      background: #000;
-    }
-  }
 }
 
-@media screen and (max-height: 545px) {
+@media screen and (max-height: 600px) {
   .header-mobile_list {
     height: 100%;
     overflow-y: scroll;
