--- a/src/app/header/header-profile/header-profile.component.scss
+++ b/src/app/header/header-profile/header-profile.component.scss
@@ -230,4 +230,41 @@
       margin-left: 20px;
     }
   }
+  .auth-modal_wrapper {
+    width: 90%;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .profile {
+    img {
+      width: 22px;
+    }
+    &_cart {
+      margin-left: 20px;
+    }
+  }
+  .auth-modal {
+    &_body {
+      flex-direction: column;
+      form {
+        width: 100%;
+      }
+    }
+    &_separator {
+      justify-content: center;
+      margin: 20px 0;
+      &:after, &:before {
+        width: calc(50% - 15px);
+        height: 1px;
+        top: 50%;
+        left: 0;
+      }
+      &:before {
+        left: auto;
+        right: 0;
+      }
+    }
+  }
 }
