--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -23,13 +23,15 @@ app-search {
     &_content {
       position: fixed;
       width: 100%;
+      height: 58px;
       top: 0;
       left: 0;
       background: #FFF;
-      z-index: 100;
+      z-index: 101;
       flex-wrap: wrap;
       padding: 10px 15px;
       border-bottom: 1px solid rgba(169, 169, 169, 0.17);
+      box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.4);
     }
     &_search {
       margin-left: 40px;
@@ -38,6 +40,23 @@ app-search {
       img {
         width: 24px;
         margin-top: 2px;
+      }
+    }
+    &_mobile-button {
+      position: absolute;
+      background: #fff;
+      padding: 17px 15px;
+      width: 50px;
+      height: 50px;
+      top: 2px;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      cursor: pointer;
+      span {
+        height: 2px;
+        background: #000;
       }
     }
     .logo {
